manifests/vaultwarden/04-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-lb
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.200.15
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
  externalTrafficPolicy: Cluster
