manifests/vaultwarden/05-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingressroute
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.k3s.dahan.house`)
      kind: Rule
      services:
        - name: vaultwarden-clusterip
          port: 80
    - match: Host(`vault.k3s.dahan.house`) && PathPrefix(`/notifications/hub`)
      kind: Rule
      services:
        - name: vaultwarden-clusterip
          port: 80
      # This router is specifically for websockets, ensuring they are handled correctly.
      # Traefik automatically upgrades connection to websocket if the backend supports it.
  tls:
    secretName: vaultwarden-tls-secret
